ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "developeriq-ingress"
  namespace: "developeriq"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/actions.blue-green: |
      {
        "type":"forward",
        "forwardConfig":{
          "targetGroups":[
            {
              "serviceName":"developeriq-service-green",
              "servicePort":"80",
              "weight":100
            },
            {
              "serviceName":"developeriq-service-blue",
              "servicePort":"80",
              "weight":0
            },
            {
              "serviceName":"analytics-service-green",
              "servicePort":"80",
              "weight":100
            },
            {
              "serviceName":"analytics-service-blue",
              "servicePort":"80",
              "weight":0
            }
          ]
        }
      }
  labels:
    app: hello-kubernetes
spec:
  rules:
    - http:
        paths:
          - path: /dev-iq
            pathType: Prefix
            backend:
              service:
                name: developeriq-service-green
                port:
                  number: 80
          - path: /analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service-green
                port:
                  number: 80
