ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: developeriq-ingress
spec:
  rules:
  - host: ""
    http:
      paths:
      - path: /developeriq
        pathType: Prefix
        backend:
          service:
            name: developeriq-service
            port:
              number: 80
      - path: /analytics
        pathType: Prefix
        backend:
          service:
            name: analytics-service
            port:
              number: 80
